# Aurora

./: .gitignore  CMakeLists.txt  OPTIMIZATION_ACTION_PLAN.md  README.md  analyze_frame_times.py  compile.sh  compile_shaders.sh  file_structure.txt  frame_times.csv  frame_times_no_msaa.csv  run.fish  to_txt.sh
aurora/: clock.py  entity.py
aurora/render/: camera.py  renderer.py  texture.py
aurora_app/: CMakeLists.txt
aurora_app/include/aurora_app/: aurora_app.hpp  aurora_clock.hpp  aurora_game_object.hpp
aurora_app/include/aurora_app/components/: aurora_card.hpp  aurora_circle.hpp  aurora_circle_component.hpp  aurora_component_interface.hpp  aurora_rounded_borders.hpp  aurora_rounded_rect.hpp  aurora_rounded_rect_component.hpp  aurora_rounded_shadows.hpp  aurora_terminal.hpp  aurora_text.hpp  aurora_triangle.hpp  aurora_triangle_component.hpp  aurora_ui.hpp
aurora_app/include/aurora_app/graphics/: aurora_model.hpp  aurora_msdf_atlas.hpp  aurora_pipeline.hpp  aurora_render_system.hpp  aurora_render_system_manager.hpp
aurora_app/include/aurora_app/profiling/: aurora_profiler.hpp  aurora_profiler_ui.hpp
aurora_app/include/aurora_app/utils/: aurora_clock.hpp  aurora_color_palette.hpp  aurora_theme_settings.hpp  aurora_utils.hpp
aurora_app/shaders/: shader.frag  shader.vert  shadow.frag  shadow.vert  text.frag  text.vert
aurora_app/src/: aurora_app.cpp  aurora_clock.cpp
aurora_app/src/components/: aurora_card.cpp  aurora_circle.cpp  aurora_circle_component.cpp  aurora_component_interface.cpp  aurora_rounded_borders.cpp  aurora_rounded_rect.cpp  aurora_rounded_rect_component.cpp  aurora_rounded_shadows.cpp  aurora_terminal.cpp  aurora_text.cpp  aurora_triangle.cpp  aurora_triangle_component.cpp  aurora_ui.cpp
aurora_app/src/graphics/: aurora_model.cpp  aurora_msdf_atlas.cpp  aurora_pipeline.cpp  aurora_render_system.cpp  aurora_render_system_manager.cpp
aurora_app/src/profiling/: aurora_profiler.cpp  aurora_profiler_ui.cpp
aurora_app/src/utils/: aurora_clock.cpp  aurora_theme_settings.cpp  aurora_utils.cpp
aurora_debug/: CMakeLists.txt
aurora_debug/include/aurora_debug/: aurora_debug_message.hpp  aurora_debug_server.hpp  aurora_debug_session.hpp
aurora_debug/src/: aurora_debug_server.cpp  aurora_debug_session.cpp
aurora_engine/: CMakeLists.txt
aurora_engine/include/aurora_engine/core/: aurora_buffer.hpp  aurora_buffer_pool.hpp  aurora_camera.hpp  aurora_descriptors.hpp  aurora_device.hpp  aurora_renderer.hpp  aurora_swap_chain.hpp  aurora_texture.hpp
aurora_engine/include/aurora_engine/profiling/: aurora_profiler.hpp
aurora_engine/include/aurora_engine/utils/: log.hpp
aurora_engine/src/core/: aurora_buffer.cpp  aurora_buffer_pool.cpp  aurora_camera.cpp  aurora_descriptors.cpp  aurora_device.cpp  aurora_renderer.cpp  aurora_swap_chain.cpp  aurora_texture.cpp  aurora_window.cpp
aurora_engine/src/profiling/: aurora_profiler.cpp
aurora_ui/: CMakeLists.txt
aurora_ui/include/aurora_ui/: aurora_app.hpp  aurora_ui.hpp
aurora_ui/include/aurora_ui/components/: aurora_card.hpp  aurora_component_info.hpp  aurora_component_interface.hpp  aurora_panel.hpp  aurora_panel_example.hpp  aurora_rounded_borders.hpp  aurora_rounded_shadows.hpp  aurora_text.hpp  aurora_ui.hpp
aurora_ui/include/aurora_ui/graphics/: aurora_pipeline.hpp  aurora_render_system.hpp  aurora_render_system_manager.hpp
aurora_ui/include/aurora_ui/profiling/: aurora_profiler_ui.hpp
aurora_ui/include/aurora_ui/utils/: aurora_clock.hpp  aurora_theme_settings.hpp  aurora_utils.hpp
aurora_ui/shaders/: text.frag
aurora_ui/src/: aurora_app.cpp  aurora_ui.cpp
aurora_ui/src/components/: aurora_card.cpp  aurora_circle.cpp  aurora_component_interface.cpp  aurora_panel.cpp  aurora_panel_example.cpp  aurora_rounded_borders.cpp  aurora_rounded_rect.cpp  aurora_rounded_shadows.cpp  aurora_terminal.cpp  aurora_text.cpp  aurora_triangle.cpp  aurora_ui.cpp
aurora_ui/src/graphics/: aurora_model.cpp  aurora_msdf_atlas.cpp  aurora_pipeline.cpp  aurora_render_system.cpp  aurora_render_system_manager.cpp
aurora_ui/src/profiling/: aurora_profiler_ui.cpp
aurora_ui/src/utils/: aurora_clock.cpp  aurora_theme_settings.cpp  aurora_utils.cpp
debug_example/: CMakeLists.txt  test_connection.py
debug_example/src/: main.cpp
include/: aurora_app.hpp  aurora_device.hpp  aurora_game_object.hpp  aurora_model.hpp  aurora_pipeline.hpp  aurora_render_system.hpp  aurora_swap_chain.hpp  aurora_window.hpp  physics_app.hpp
shaders/: shader.frag  shader.vert  shader.vert.spv
src/: aurora_app.cpp  aurora_device.cpp  aurora_model.cpp  aurora_pipeline.cpp  aurora_render_system.cpp  aurora_renderer.cpp  aurora_swap_chain.cpp  aurora_window.cpp  main.cpp  physics_app.cpp
times/: base_frame_times.csv  sub_allocation_frame_times.csv
